<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:src="@drawable/g_palac" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <Button
                    android:id="@+id/info_facebook_guzooo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_facebook"
                    android:theme="@style/ButtonNormal"/>

                <Button
                    android:id="@+id/info_youtube_guzooo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_youtube"
                    android:theme="@style/ButtonNormal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <Button
                    android:id="@+id/info_facebook_palac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_facebook"
                    android:theme="@style/ButtonNormal"/>

                <Button
                    android:id="@+id/info_www_palac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_www"
                    android:theme="@style/ButtonNormal"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/info_camping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_camping"
            android:theme="@style/ButtonNormal"/>

        <Button
            android:id="@+id/info_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_room"
            android:theme="@style/ButtonNormal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/info_ocen_app"/>

        <Button
            android:id="@+id/info_formularz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonNormal"
            android:text="@string/info_formularz"/>

        <Button
            android:id="@+id/info_opinia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonNormal"
            android:text="@string/info_google_play"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/sponsorzy"
            android:layout_marginTop="8dp"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dziki Zachód 2018 v1.0.1"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/white"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>