<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProgramFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/program_recycle"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:theme="@style/ButtonNormal"
            android:text="@string/program_day_1"/>

        <Button
            android:id="@+id/button_sob"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:theme="@style/ButtonNormal"
            android:text="@string/program_day_2" />

        <Button
            android:id="@+id/button_nd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:theme="@style/ButtonNormal"
            android:text="@string/program_day_3" />
    </LinearLayout>
</LinearLayout>
