<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/place_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/place_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>

            <CheckBox
                android:id="@+id/place_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_box_favorite"
                android:layout_marginBottom="8dp"
                android:onClick="onClickFavorite"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_wydarzenia"
                android:theme="@style/TextTitle"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/place_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/place_null"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/place_wydarzenia_null"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/place_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>