<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WydarzenieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/wydarzenie_time"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/wydarzenie_description"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>

            <CheckBox
                android:id="@+id/wydarzenie_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_box_favorite"
                android:onClick="onClickFavorite"
                android:buttonTint="@color/colorPrimary"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/wydarzenie_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <fragment
        android:id="@+id/wydarzenie_map"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <android.support.v7.widget.CardView
        android:id="@+id/wydarzenie_null"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/wydarzenie_null_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/wydarzenie_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/wydarzenie_btn_inne_wyd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/wydarzenie_ten_czas"
            android:onClick="onClickInneWydarzenia" />

        <Button
            android:id="@+id/wydarzenie_btn_inne_god"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/wydarzenie_te_same"
            android:onClick="onClickInneGodziny"/>
    </LinearLayout>
</LinearLayout>